docs/7.52/md/abapshift_places.md
---
title: "SHIFT - places"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_shortref.htm) Syntax ... BY num PLACES  UP TO substring ... Variants: 1. ... BY num PLACES ...(#!ABAP_VARIANT_1@1@) 2. ... UP TO substring ...(#!ABAP_VARIANT_2@2@) Variant 1 ... BY num PLACES
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_places.htm"
abapFile: "abapshift_places.htm"
keywords: ["do", "if", "case", "try", "data", "abapshift", "places"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_string.htm) →  [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstring_processing_statements.htm) →  [SHIFT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift.htm) → 

SHIFT - places

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_shortref.htm)

Syntax

... *{*BY num PLACES*}* *|* *{*UP TO substring*}* ...

Variants:

[1\. ... BY num PLACES ...](#!ABAP_VARIANT_1@1@)
[2\. ... UP TO substring ...](#!ABAP_VARIANT_2@2@)

Variant 1

... BY num PLACES ...

Effect

The content of dobj is shifted to the left or right (as specified by [direction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_direction.htm)) by the places specified in num. num is a [numeric expression position](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennumerical_expr_position_glosry.htm "Glossary Entry") of operand type i. If the content of num is less than or equal to 0, the content of the data object dobj remains unchanged.

Example

Using the statement FIND, the offset of the word "you" in text is determined and its content is shifted by this length to the left or right. After the shift, text contains "you know" and is eight characters long.

DATA: text TYPE string VALUE \`I know you know\`,
      off  TYPE i.
FIND 'you' IN text MATCH OFFSET off.
SHIFT text BY off PLACES.

Variant 2

... UP TO substring ...

Effect

In the data object dobj, the first substring is searched for whose contents match those of substring. This is case-sensitive. The content of the data object dobj is shifted as far possible to the left or right (as specified in [direction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapshift_direction.htm)) until the byte or character string contained in substring is at the position that is at the beginning or end of the data object dobj before the shift.

substring expects a character-like or byte-like data object. If substring is an empty string, the place in front of the first character or byte is found. On the left, no shift takes place and a shift by the entire length of dobj takes place on the right.

In character string processing, substring is a [character-like expression position](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharlike_expr_position_glosry.htm "Glossary Entry"); in data objects, substring with a fixed length respects the trailing blanks.

System Fields

sy-subrc

Meaning

0

The substring in substring was found in the data object dobj and its contents were moved accordingly.

4

The substring in substring was not found in the data object dobj and its contents remain unchanged.

Note

If the case of data objects of fixed length, the substring searched for after the shift is either (depending on the direction) flush left at the beginning or flush right at the end of the data object. If the case of strings, the shift makes the data object longer on the right. This means that the substring is not at the right margin after the shift.

Example

This example has the same result as the previous example. However, here the search for "you" is not performed in the statement SHIFT itself.

DATA text TYPE string VALUE \`I know you know \`.
SHIFT text UP TO 'you'.